{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 10,
  "lineage": "3848faa2-162f-39ae-e1c0-496328e14b18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875141475090:internet-gateway/igw-0ba377f86aca2ee7b",
            "id": "igw-0ba377f86aca2ee7b",
            "owner_id": "875141475090",
            "tags": {
              "Name": "secure-igw-jdev"
            },
            "tags_all": {
              "Name": "secure-igw-jdev"
            },
            "vpc_id": "vpc-0b64193d7af8bdb34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875141475090:route-table/rtb-0e52750052d3d6b36",
            "id": "rtb-0e52750052d3d6b36",
            "owner_id": "875141475090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba377f86aca2ee7b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-jdev"
            },
            "tags_all": {
              "Name": "public-rt-jdev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b64193d7af8bdb34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0122fd841bbfaa9cf",
            "route_table_id": "rtb-0e52750052d3d6b36",
            "subnet_id": "subnet-0903b3d448e8e4eca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875141475090:security-group/sg-0882dff615b0718bd",
            "description": "Allow SSH inbound from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0882dff615b0718bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "154.159.254.34/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-only",
            "name_prefix": "",
            "owner_id": "875141475090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-ssh-only-jdev"
            },
            "tags_all": {
              "Name": "sg-ssh-only-jdev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b64193d7af8bdb34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875141475090:subnet/subnet-0903b3d448e8e4eca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0903b3d448e8e4eca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "875141475090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-jdev"
            },
            "tags_all": {
              "Name": "public-subnet-jdev"
            },
            "vpc_id": "vpc-0b64193d7af8bdb34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secure_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875141475090:vpc/vpc-0b64193d7af8bdb34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f9325b4222dfaf6",
            "default_route_table_id": "rtb-032510112ab169ee1",
            "default_security_group_id": "sg-0ed1bf4c731dd3727",
            "dhcp_options_id": "dopt-0d94691c4120dc76b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b64193d7af8bdb34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032510112ab169ee1",
            "owner_id": "875141475090",
            "tags": {
              "Environment": "learning",
              "Name": "secure-vpc-jdev",
              "Owner": "Admin-jdev",
              "project": "devsecops-portfolio"
            },
            "tags_all": {
              "Environment": "learning",
              "Name": "secure-vpc-jdev",
              "Owner": "Admin-jdev",
              "project": "devsecops-portfolio"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}